--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -1,7 +1,27 @@
+.card {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #8ebce4;
+    background-clip: border-box;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
 #Card.Img {
     height: 450px;
     margin-top: 12px;
-    margin-bottom: 12px;
+    margin-bottom: 22px;
+    padding: 22px;
+    border-bottom: 20px
 };
+
+#Card.Body {
+    border-bottom: 10px;
+}
   
  
